Updated gallery and progress

--- a/beattyFrame/DataSource/shareableData.plist
+++ b/beattyFrame/DataSource/shareableData.plist
@@ -82,7 +82,7 @@
 					<string>15-0202_overall south west.jpg</string>
 					<string>0119 Exelon c1 6t.jpeg</string>
 					<string>1119 Exelon c2 5t.jpg</string>
-					<string>Exelon-Retail-View-3.tif</string>
+					<string>Exelon-Retail-View-3.jpg</string>
 					<string>Lobby_R01.jpg</string>
 					<string>Neoscape_BeattyDevelopmentHarbor Point_ExcelonRetail_FINAL.jpg</string>
 					<string>View02_Final.jpg</string>
@@ -94,7 +94,7 @@
 					<string>15-0202_overall south west.jpg</string>
 					<string>0119 Exelon c1 6t.jpeg</string>
 					<string>1119 Exelon c2 5t.jpg</string>
-					<string>Exelon-Retail-View-3.tif</string>
+					<string>Exelon-Retail-View-3.jpg</string>
 					<string>Lobby_R01.jpg</string>
 					<string>Neoscape_BeattyDevelopmentHarbor Point_ExcelonRetail_FINAL.jpg</string>
 					<string>View02_Final.jpg</string>
@@ -106,7 +106,7 @@
 					<string>15-0202_overall south west.jpg</string>
 					<string>0119 Exelon c1 6t.jpeg</string>
 					<string>1119 Exelon c2 5t.jpg</string>
-					<string>Exelon-Retail-View-3.tif</string>
+					<string>Exelon-Retail-View-3.jpg</string>
 					<string>Lobby_R01.jpg</string>
 					<string>Neoscape_BeattyDevelopmentHarbor Point_ExcelonRetail_FINAL.jpg</string>
 					<string>View02_Final.jpg</string>
